# turingmachinelang

./: CHANGELOG.md  LICENSE  README.md  runtests.sh  setup.cfg  setup.py
turingmachinelang/: __init__.py  tml.tx
